diesel_compile_tests/tests/fail/boxed_queries_must_be_used_with_proper_connection.stderr
error[E0271]: type mismatch resolving `<diesel::SqliteConnection as diesel::Connection>::Backend == Pg`
  --> $DIR/boxed_queries_must_be_used_with_proper_connection.rs:14:37
   |
14 |     users::table.into_boxed::<Pg>().load::<(i32,)>(&mut connection);
   |                                     ^^^^ expected struct `Sqlite`, found struct `Pg`
   |
   = note: required because of the requirements on the impl of `LoadQuery<diesel::SqliteConnection, (i32,)>` for `BoxedSelectStatement<'_, (diesel::sql_types::Integer,), FromClause<users::table>, Pg>`
